# concordium-dapp-starter

./: .gitignore  README.md
.github/: dependabot.yml
.github/workflows/: format-lint-build-test.yml  npm-audit.yml
contracts/: .gitignore
contracts/my-contract/: Cargo.toml
contracts/my-contract/deploy-scripts/: Cargo.toml  README.md
contracts/my-contract/deploy-scripts/src/: main.rs
contracts/my-contract/src/: lib.rs
contracts/my-contract/tests/: tests.rs
frontend/: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.scss
