[package]
edition = "2021"
name = "deploy_scripts"
version = "1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
tokio = { version = "1.38", features = ["rt", "macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive", "env"] }
concordium-rust-sdk = "4"
my-contract = { path = "../" }
# To enable TLS for the Client from concordium-rust-sdk. The version is put as '*' for the resolver to select the same version as the concordium-rust-sdk.
tonic = { version = "*", features = ["tls"] }
